--- a/index.html
+++ b/index.html
@@ -59,23 +59,29 @@
         <section class="sectionAyudarte">
             <h3>¿En que puedo ayudarte?</h3>
                 <div class="section2">
-                    <div class="brandingHome">
-                        <h4>BRANDING</h4>
-                        <img src="./img/imgbranding.svg" alt="imagen branding">
-                        <h6>Identidad de marca</h6>
-                        <p>Comencemos definiendo y creando el diseño para darle identidad a tu marca con todos sus elementos gráficos y digitales
-                        que necesites.
-                        </p>
-                    </div>
-                    <div class="brandingHome">
-                        <h4> DIGITAL</h4>
-                        <img src="./img/imgdigital.svg" alt="imagen digital">
-                        <h6>Diseño web y plataformas UX/UI</h6>
-                        <p>Para que tu sitio web o app tenga usabilidad necesitas un diseñador UX.
-                        Desde mis conocimientos realizo las investigaciones y pruebas necesarias para mejorar la experiencia del usuario.
-                        </p>
-                    </div>
-                    <div class="brandingHome">
+                    <a href="./Paginas/services/services.html" class="no_link">
+                        <div class="brandingHome" id="branding_home">
+                            <h4>BRANDING</h4>
+                            <img src="./img/imgbranding.svg" alt="imagen branding">
+                            <h6>Identidad de marca</h6>
+                            <p>Comencemos definiendo y creando el diseño para darle identidad a tu marca con todos sus elementos gráficos y digitales
+                            que necesites.
+                            </p>
+                        </div>
+                    </a>
+                    <a href="./Paginas/services/services.html" class="no_link">
+                        <div class="brandingHome" id="digital_home">
+                            <h4> DIGITAL</h4>
+                            <img src="./img/imgdigital.svg" alt="imagen digital">
+                            <h6>Diseño web y plataformas UX/UI</h6>
+                            <p>Para que tu sitio web o app tenga usabilidad necesitas un diseñador UX.
+                            Desde mis conocimientos realizo las investigaciones y pruebas necesarias para mejorar la experiencia del usuario.
+                            </p>
+                        </div>
+                    </a>
+
+                    <a href="./Paginas/services/services.html" class="no_link">
+                    <div class="brandingHome" id="comunicacion_home">
                         <h4>COMUNICACION</h4>
                         <img src="./img/imgcomunicaicon.svg" alt="imagen comunicacion">
                         <h6>Contenidos y estrategia</h6>
@@ -83,19 +89,20 @@
                         contenido necesario para lograr tener un mayor alcance.
                         </p>
                     </div>
+                    </a>
                 </div>  
         </section>
         <section class="sectionProyectos">
            <h3>Mis proyectos</h3>
            <div class="proyectos proyectos1">
-                <a href="./Paginas/services/services.html" class="proy1_6 img1 digital1" id="img1">
+                <a href="./Paginas/projects/projects.html" class="proy1_6 img1 digital1" id="img1">
                     <p>DIGITAL</p>
                 </a>
-                <a href="./Paginas/services/services.html" class="proy2_5 img2 branding1" id="img2">
+                <a href="./Paginas/projects/projects.html" class="proy2_5 img2 branding1" id="img2">
                     <p>BRANDING</p>
                 </a>
             
-                <a href="./Paginas/services/services.html" class="proy2_5 img3 comunicacion1" id="img3">
+                <a href="./Paginas/projects/projects.html" class="proy2_5 img3 comunicacion1" id="img3">
                     <p>COMUNICACIÓN</p>
                 </a>
             </div> 
