--- a/Paginas/projects/projects.html
+++ b/Paginas/projects/projects.html
@@ -45,9 +45,9 @@
         <section class="sectionAll">
             <nav class="sidebarServicios">
                 <ul class="sidebar_List">
-                    <li class="linkSidebar" id="branding_esp">BRANDING</li>
-                    <li class="linkSidebar" id="digital_esp">DIGITAL</li>
-                    <li class="linkSidebar" id="comunicacion_esp">COMUNICACION</li>
+                    <li class="linkSidebar branding_sidebar" id="branding_esp">BRANDING</li>
+                    <li class="linkSidebar digital_sidebar" id="digital_esp">DIGITAL</li>
+                    <li class="linkSidebar comunicacion_sidebar" id="comunicacion_esp">COMUNICACION</li>
                 </ul>
             </nav>
                 <section class="projects_branding sectBranding" id="branding">
@@ -268,9 +268,9 @@
         <section class="sectionAll">
             <nav class="sidebarServicios">
                 <ul class="sidebar_List">
-                    <li class="linkSidebar" id="branding_ing">BRANDING</li>
-                    <li class="linkSidebar" id="digital_ing">DIGITAL</li>
-                    <li class="linkSidebar" id="comunicacion_ing">COMUNICATION</li>
+                    <li class="linkSidebar branding_sidebar" id="branding_ing">BRANDING</li>
+                    <li class="linkSidebar digital_sidebar" id="digital_ing">DIGITAL</li>
+                    <li class="linkSidebar comunicacion_sidebar" id="comunicacion_ing">COMUNICATION</li>
                 </ul>
             </nav>
                 <section class="projects_branding sectBranding" id="branding">
