--- a/Paginas/about/about.html
+++ b/Paginas/about/about.html
@@ -199,7 +199,7 @@
                     </ul>
             </nav>
     </header>
-    <main class="english">
+    <main class="english main_top">
         <section class="all_description">
             <div class="img_description">
                 <img src="../../img/Foto ivana.jpg" alt="">
