--- a/Paginas/projects/projects.html
+++ b/Paginas/projects/projects.html
@@ -10,7 +10,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@300&family=Open+Sans:wght@600&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <!-- Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Style -->
     <link rel=”stylesheet” href=”https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I” crossorigin=”anonymous”>
     <link rel="stylesheet" href="../../css/styles.css">
@@ -22,7 +22,7 @@
         <nav class="navbar">
             <div class="nav_responsive">
                 <button class="boton" id="boton_menu">
-                    <i class="bi bi-list"></i>
+                    <i class="fa-solid fa-bars"></i>
                 </button>    
                 <a href="../../index.html" class="logo link_logo">
                     <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
@@ -36,7 +36,7 @@
                     <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
                     <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACTO</a></li>
                     <button class="btn_idioma" id="btn_ingles" onclick="checkStatusPro()">
-                        <span><img class="ingles_img" src="../../img/flag-england.png" alt="ingles"></span>
+                        <span><img class="español_img" src="../../img/flag3-spain-removebg-preview.png" alt="español"></span>
                     </button>
                 </ul>
             </nav>
@@ -191,18 +191,18 @@
                 <h5>¡Contactame!</h5>
                 <div class="buttons">
                  <ul class="footer_list">
-                        <li>
-                            <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> 
-                        </li>
-                        <li>
-                            <a href="../contact/contact.html"><i class="bi bi-envelope"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.behance.net/ivanaguardamaa" target="_blank"><i class="bi bi-behance"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                        </li>
+                    <li>
+                        <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a> 
+                    </li>
+                    <li>
+                        <a href="./Paginas/contact/contact.html"><i class="fa-solid fa-envelope"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.behance.net/ivanaguardamaa" target="_blank"><i class="fa-brands fa-behance"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </li>
                     </ul>
                 </div> 
                 <div class="mail_footer">
@@ -223,18 +223,22 @@
                 <ul class="design_list_resp">
                     <div class="design_resp1">
                         <li>
-                            <p><a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                            <a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><p>Julieta Milito</p></a>
                         </li>
                         <li>
-                            <p><a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                            <a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"> <p>Brenda Zaya</p></a>
                         </li>
                     </div>
                     <div class="design_resp2">
                         <li>
-                            <p><a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                            <a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><p>Leandro Waserman</p></a>
                         </li>
                         <li>
-                            <p><a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                            <a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><p>Germán Benavides</p></a>
                         </li>
                     </div>
                 </ul>
@@ -245,7 +249,7 @@
             <nav class="navbar">
                 <div class="nav_responsive">
                     <button class="boton" id="boton_menu">
-                        <i class="bi bi-list"></i>
+                        <i class="fa-solid fa-bars"></i>
                     </button>    
                     <a href="../../index.html" class="logo link_logo">
                         <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
@@ -259,7 +263,7 @@
                             <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
                             <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACT</a></li>
                             <button class="btn_idioma" id="btn_español" onclick="checkStatusPro()">
-                                <span><img class="español_img" src="../../img/flag3-spain-removebg-preview.png" alt="español"></span>
+                                <span><img class="ingles_img" src="../../img/flag-england.png" alt="ingles"></span>
                             </button>
                         </ul>
                 </nav>
@@ -418,18 +422,18 @@
                 <h5>Contact me</h5>
                 <div class="buttons">
                  <ul class="footer_list">
-                        <li>
-                            <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> 
-                        </li>
-                        <li>
-                            <a href="../contact/contact.html"><i class="bi bi-envelope"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.behance.net/ivanaguardamaa" target="_blank"></a><i class="bi bi-behance"></i>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                        </li>
+                    <li>
+                        <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a> 
+                    </li>
+                    <li>
+                        <a href="./Paginas/contact/contact.html"><i class="fa-solid fa-envelope"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.behance.net/ivanaguardamaa" target="_blank"><i class="fa-brands fa-behance"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </li>
                     </ul>
                 </div> 
                 <div class="mail_footer">
@@ -450,25 +454,29 @@
                 <ul class="design_list_resp">
                     <div class="design_resp1">
                         <li>
-                            <p><a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                            <a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><p>Julieta Milito</p></a>
                         </li>
                         <li>
-                            <p><a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                            <a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"> <p>Brenda Zaya</p></a>
                         </li>
                     </div>
                     <div class="design_resp2">
                         <li>
-                            <p><a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                            <a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><p>Leandro Waserman</p></a>
                         </li>
                         <li>
-                            <p><a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                            <a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><p>Germán Benavides</p></a>
                         </li>
                     </div>
                 </ul>
             </section>
         </footer>
         <!-- Js Funciones -->
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/js/all.min.js" integrity="sha512-Cvxz1E4gCrYKQfz6Ne+VoDiiLrbFBvc6BPh4iyKo2/ICdIodfgc5Q9cBjRivfQNUXBCEnQWcEInSXsvlNHY/ZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="../../Javascript/main.js"></script>
     <script src="../../Javascript/projects.js"></script>
     </body>
