--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Julius+Sans+One&family=Montserrat:wght@300&family=Open+Sans:wght@600&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <!-- Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Style -->
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="img/Component 1.svg">
@@ -21,7 +21,7 @@
         <nav class="navbar">
             <div class="nav_responsive">
                 <button class="boton" id="nav_esp">
-                    <i class="bi bi-list"></i>
+                    <i class="fa-solid fa-bars"></i>
                 </button>  
                 <a href="./index.html" class="logo link_logo">
                     <img src="./img/Component 1.svg" class="logo_svg" alt="logo">
@@ -35,7 +35,7 @@
                     <li class="nav_item"><a href="./Paginas/about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
                     <li class="nav_item"><a href="./Paginas/contact/contact.html" class="nav_link nav_linkMenu">CONTACTO</a></li>
                     <button class="btn_idioma" id="btn_ingles">
-                        <span><img class="ingles_img" src="./img/flag-england.png" alt="ingles"></span>
+                        <span><img class="español_img" src="./img/flag3-spain-removebg-preview.png" alt="ingles"></span>
                     </button>
                 </ul>
         </nav>
@@ -50,7 +50,7 @@
                 Mi distinción es el enfoque en el campo de la investigación, el análisis y el desarrollo de estrategias creativas,
                 poniendo como principal protagonista al usuario y de esta manera, poder brindarle la mejor experiencia.
                 </P>
-                <a href="./Paginas/about/about.html"><button class="btnSection1">LEE MAS SOBRE MI</button></a>
+                <button class="btnSection1"><a href="./Paginas/about/about.html">LEE MAS SOBRE MI</a></button>
             </div>
             <div >
                 <img class="imgHome" src="./img/imgivanahome.png" alt="imagen home">
@@ -124,18 +124,18 @@
             <h5>¡Contactame!</h5>
             <div class="buttons">
              <ul class="footer_list">
-                    <li>
-                        <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> 
-                    </li>
-                    <li>
-                        <a href="./Paginas/contact/contact.html"><i class="bi bi-envelope"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.behance.net/ivanaguardamaa" target="_blank"><i class="bi bi-behance"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                    </li>
+                <li>
+                    <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a> 
+                </li>
+                <li>
+                    <a href="./Paginas/contact/contact.html"><i class="fa-solid fa-envelope"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.behance.net/ivanaguardamaa" target="_blank"><i class="fa-brands fa-behance"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                </li>
                 </ul>
             </div> 
             <div class="mail_footer">
@@ -156,18 +156,22 @@
             <ul class="design_list_resp">
                 <div class="design_resp1">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        <a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><p>Julieta Milito</p></a>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        <a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"> <p>Brenda Zaya</p></a>
                     </li>
                 </div>
                 <div class="design_resp2">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        <a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><p>Leandro Waserman</p></a>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        <a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><p>Germán Benavides</p></a>
                     </li>
                 </div>
             </ul>
@@ -178,7 +182,7 @@
         <nav class="navbar">
             <div class="nav_responsive">
                 <button class="boton" id="nav_esp">
-                    <i class="bi bi-list"></i>
+                    <i class="fa-solid fa-bars"></i>
                 </button>  
                 <a href="./index.html" class="logo link_logo">
                     <img src="./img/Component 1.svg" class="logo_svg" alt="logo">
@@ -192,7 +196,7 @@
                     <li class="nav_item"><a href="./Paginas/about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
                     <li class="nav_item"><a href="./Paginas/contact/contact.html" class="nav_link nav_linkMenu">CONTACT</a></li>
                     <button class="btn_idioma" id="btn_español">
-                        <span><img class="español_img" src="./img/flag3-spain-removebg-preview.png" alt="español"></span>
+                        <span><img class="ingles_img" src="./img/flag-england.png" alt="ingles"></span>
                     </button>
                 </ul>
         </nav>
@@ -206,7 +210,7 @@
                     <br>
                 I am distinguished by my focus on research, analysis and the development of creative strategies that makes the user the protagonist, in order to bring him the best experience possible.
                 </P>
-                <a href="./Paginas/about/about.html"><button class="btnSection1">LEARN MORE ABOUT ME</button></a>
+                <button class="btnSection1"><a href="./Paginas/about/about.html">LEARN MORE ABOUT ME</a></button>
             </div>
             <div >
                 <img class="imgHome" src="./img/imgivanahome.png" alt="imagen home">
@@ -273,16 +277,16 @@
             <div class="buttons">
              <ul class="footer_list">
                     <li>
-                        <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> 
+                        <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a> 
                     </li>
                     <li>
-                        <a href="./Paginas/contact/contact.html"><i class="bi bi-envelope"></i></a>
+                        <a href="./Paginas/contact/contact.html"><i class="fa-solid fa-envelope"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.behance.net/ivanaguardamaa" target="_blank"><i class="bi bi-behance"></i></a>
+                        <a href="https://www.behance.net/ivanaguardamaa" target="_blank"><i class="fa-brands fa-behance"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/ivana-guardama%C3%B1a-2127a495/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                     </li>
                 </ul>
             </div> 
@@ -304,24 +308,29 @@
             <ul class="design_list_resp">
                 <div class="design_resp1">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        <a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/julieta-milito" target="_blank"><p>Julieta Milito</p></a>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        <a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/brenda-zaya" target="_blank"> <p>Brenda Zaya</p></a>
                     </li>
                 </div>
                 <div class="design_resp2">
                     <li>
-                        <p><a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        <a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/leandrowaserman/" target="_blank"><p>Leandro Waserman</p></a>
                     </li>
                     <li>
-                        <p><a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        <a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/german-benavides-leon/" target="_blank"><p>Germán Benavides</p></a>
                     </li>
                 </div>
             </ul>
         </section>
     </footer>
     <!-- Js Funciones -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/js/all.min.js" integrity="sha512-Cvxz1E4gCrYKQfz6Ne+VoDiiLrbFBvc6BPh4iyKo2/ICdIodfgc5Q9cBjRivfQNUXBCEnQWcEInSXsvlNHY/ZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./Javascript/home.js"></script>
     <script src="./Javascript/main.js"></script>
 </body>
