--- a/Paginas/contact/contact.html
+++ b/Paginas/contact/contact.html
@@ -52,7 +52,7 @@
                 <form action="https://formsubmit.co/ivana.guardamagna@gmail.com" method="POST" class="contactForm" >
                     <input type="text" name="_honey" style="display: none;">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="ivanaguardamagna.netlify.app/Paginas/contact/thankyou.html">
+                    <input type="hidden" name="_next" value="ivanaguardamana.netlify.app/Paginas/contact/thankyou.html">
                     <div class="formGrid">
                         <input type="text" name="name" placeholder="Nombre Completo"  class="form_name" required>
                         <input type="text" name="email" placeholder="Correo Electrónico" class="form_email" required>
@@ -158,7 +158,7 @@
                 <form action="https://formsubmit.co/ivana.guardamagna@gmail.com"  method="POST" class="contactForm" >
                     <input type="text" name="_honey" style="display: none;">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="ivanaguardamagna.netlify.app/Paginas/contact/thankyou.html">
+                    <input type="hidden" name="_next" value="ivanaguardamana.netlify.app/Paginas/contact/thankyou.html">
                     <div class="formGrid">
                         <input type="text" placeholder="Full Name"  class="form_name" name="name" required>
                         <input type="text" placeholder="Email" class="form_email" name="email" required>
