--- a/Paginas/projects/projects.html
+++ b/Paginas/projects/projects.html
@@ -45,7 +45,7 @@
         <section class="sectionAll">
             <nav class="sidebarServicios">
                 <ul class="sidebar_List">
-                    <li class="linkSidebar branding_sidebar" id="branding_esp">BRANDING</li>
+                    <li class="linkSidebar branding_sidebar sidebar_active" id="branding_esp">BRANDING</li>
                     <li class="linkSidebar digital_sidebar" id="digital_esp">DIGITAL</li>
                     <li class="linkSidebar comunicacion_sidebar" id="comunicacion_esp">COMUNICACION</li>
                 </ul>
@@ -272,7 +272,7 @@
         <section class="sectionAll">
             <nav class="sidebarServicios">
                 <ul class="sidebar_List">
-                    <li class="linkSidebar branding_sidebar" id="branding_ing">BRANDING</li>
+                    <li class="linkSidebar branding_sidebar sidebar_active" id="branding_ing">BRANDING</li>
                     <li class="linkSidebar digital_sidebar" id="digital_ing">DIGITAL</li>
                     <li class="linkSidebar comunicacion_sidebar" id="comunicacion_ing">COMUNICATION</li>
                 </ul>
